fix: .page-body overflow-x and .ql-formats text-align

--- a/frappe/public/less/quill.less
+++ b/frappe/public/less/quill.less
@@ -145,14 +145,10 @@
 }
 
 // RTL alignment
-.control-input {
-	direction: ltr;
+.ql-formats {
+	text-align: left;
 }
 
 .ql-container {
 	direction: ltr;
-}
-
-.page-body {
-	overflow-x: visible;
 }
